Changes in RWinEdt_2.0-0:
-------------------------
We are WinEdt 6 ready now!
Took the R-Sweave mode from http://www.winedt.org
by Gilbert Ritschard and Karl Koeller and ported it 
back to the RWinEdt package.

The modes for WinEdt 5.x and WinEdt 6.x are very different!



Changes in RWinEdt_1.8-3:
-------------------------
- allow for Windows 7: tabs text was hidden
- error message that admin privileges are reuqired for first start
- configure stuff no longer needed


Changes in RWinEdt_1.8-1:
-------------------------
- allow for other Window titles than RGui / R Console,
  so it also works for REvolution's versions of R now


Changes in RWinEdt_1.8-0:
-------------------------
- use R's internal readRegistry() and get rid of
  SWinRegistry tools dependencies and therefore reduce
  size of package considerably
- R >= 2.7.0 required
- move unused PasteToR.exe to .Rbuildignore
- update function index for R-2.7.0


Changes in RWinEdt_1.7-9:
-------------------------
- link appropriately against Graphapp


Changes in RWinEdt_1.7-6:
-------------------------
- ismdi() fix for R >= 2.6.0


Changes in RWinEdt_1.7-5:
-------------------------
- ismdi() symbol fix for R >= 2.4.0


Changes in RWinEdt_1.7-3:
-------------------------
- Desktop and StartMenu icons can be created using automatically
  generated Visual Basic scripts

Changes in RWinEdt_1.7-2:
-------------------------
- Vignette added
- NAMESPACE added

Changes in RWinEdt_1.7-1:
-------------------------
- MDI mode is no longer supported for non-english versions of RGui!
  SDI mode is the default, now

Changes in RWinEdt_1.7-0:
-------------------------
- Bug fixes to make it work with an arbitrary translated RGui
  (as it is the default for some languages starting from R-2.1.0)
- Recompiled for use with R-2.1.0
- updated the function index (R-2.1.0)

Changes in RWinEdt_1.6-2:
-------------------------
- Recompiled for use with R-2.0.0
- changes required for lazy loading and friends