@@ -1,0 +1,13 @@
+TOOLBAR="Toolbar_R"
+  CONFIG_FILTER="Default;MiKTeX;TeX Live;YandY TeX;R"
+  BUTTON="R_Console"
+  BUTTON="R-line-go"
+  BUTTON="R-line"
+  BUTTON="R-paste-go"
+  BUTTON="R-paste"
+  BUTTON="R-source"
+  BUTTON="R-script"
+  BUTTON="Stangle"
+  BUTTON="Sweave"
+  BUTTON="Sweave_pdfLaTeX"
+  BUTTON="R-history"
